<resources>
    <string name="app_name">Marathon</string>
    <string name="mainfragment">MainFragment</string>
    <string name="changeName">Change user name</string>
    <string name="avatar">avatar_thumb</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="runners">"Runners"</string>
    <string name="runner_card">"Runner card"</string>
    <string name="login">"Login"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="shr_hint_username">Email</string>
    <string name="org_info">Info</string>
    <string name="organizers">Organizers</string>
    <string name="calculators">Calculators</string>
    <string name="sponsors">Sponsors</string>
    <string name="sponsor">Sponsor</string>
    <string name="map">Map</string>
    <string name="marathons">Marathons</string>
    <string name="marathon">Marathon</string>
    <string name="person">Person</string>
    <string name="registration">Registration</string>
    <string name="register">register</string>
    <string name="double_parameter">%1$s, %2$s</string>
    <string name="age">Age</string>
    <string name="birthday">Birthday</string>
    <string name="name">Name</string>
    <string name="countries">Countries</string>
    <string name="genders">Genders</string>
    <string name="account">Account</string>
    <string name="height">Height, sm</string>
    <string name="weight">Weight, kg</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="info">info</string>
    <string name="donation">Donation</string>
    <string name="info_header">Info</string>
    <string name="donate">Donate</string>
</resources>
