<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context="ru.somarov.marathon.ui.main.plugin.personal_info.PersonalCardFragment">

    <data>
        <variable
            name="runner"
            type="ru.somarov.marathon.backend.main.core.db.entity.Runner" />
    </data>

        <androidx.constraintlayout.widget.ConstraintLayout

            android:id="@+id/reclayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:background="?attr/selectableItemBackground"
            android:minHeight="64dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.47000003">



            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="1dp"

                android:layout_marginEnd="1dp"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <ImageView
                        android:id="@+id/icon"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_margin="16dp"
                        android:contentDescription="@string/avatar"
                        android:layout_gravity="center"
                        android:padding="16dp" />
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/usernameWrapper"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"

                        android:hint="@string/shr_hint_username"
                        app:layout_constraintBottom_toBottomOf="@+id/container"
                        app:layout_constraintEnd_toEndOf="@+id/container"
                        app:layout_constraintStart_toStartOf="@+id/container"
                        app:layout_constraintTop_toTopOf="@+id/container"
                        app:layout_constraintVertical_bias="0.0">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/username"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            android:autofillHints="false"
                            android:inputType="textEmailAddress"
                            android:selectAllOnFocus="true"
                            android:text="@={runner.email}" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/passwordWrapper"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginBottom="32dp"
                        android:hint="@string/prompt_password"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/usernameWrapper"
                        app:layout_constraintVertical_bias="0.060000002">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:autofillHints="false"
                            android:imeActionLabel="@string/action_sign_in_short"
                            android:imeOptions="actionDone"
                            android:inputType="textPassword"
                            android:selectAllOnFocus="true"
                            android:text="@={runner.password}" />
                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/ageWrapper"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginBottom="32dp"
                        android:hint="@string/age"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/cnfWrapper"
                        app:layout_constraintVertical_bias="0.07999998">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/age"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:autofillHints="false"
                            android:inputType="number"
                            android:selectAllOnFocus="true"
                            android:text="@={`` + runner.age}"
                            />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/birthdayWrapper"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginBottom="32dp"
                        android:hint="@string/birthday"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/ageWrapper"
                        app:layout_constraintVertical_bias="0.07999998">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/birthday"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:autofillHints="false"
                            android:imeActionLabel="@string/action_sign_in_short"
                            android:imeOptions="actionDone"
                            android:inputType="date"
                            android:selectAllOnFocus="true"
                            android:text="@={runner.birthday}"
                            />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/nameWrapper"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginBottom="32dp"
                        android:hint="@string/name"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/birthdayWrapper"
                        app:layout_constraintVertical_bias="0.07999998">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:autofillHints="false"
                            android:imeActionLabel="@string/action_sign_in_short"
                            android:imeOptions="actionDone"
                            android:inputType="textPassword"
                            android:selectAllOnFocus="true"
                            android:text="@={runner.name}"
                            />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/countriesWrapper"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginBottom="32dp"
                        android:hint="@string/countries"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/nameWrapper"
                        app:layout_constraintVertical_bias="0.07999998">

                        <Spinner
                            android:id="@+id/countries"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:autofillHints="false"
                            android:imeOptions="actionDone"
                            android:inputType="textPassword"
                            android:selectAllOnFocus="true"
                            />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/genderWrapper"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginBottom="32dp"
                        android:hint="@string/genders"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/countriesWrapper"
                        app:layout_constraintVertical_bias="0.07999998">

                        <Spinner
                            android:id="@+id/genders"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:autofillHints="false"
                            android:imeOptions="actionDone"
                            android:inputType="text"
                            android:selectAllOnFocus="true"
                            />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
</layout>